# sudoku-solver

./: .commitsar.yml  .gitignore  Cargo.lock.license  Cargo.toml  README.md
.github/workflows/: conventional-commits.yaml  reuse.yml  rust.yml
src/: board.rs  lib.rs  main.rs
