# Copyright (C) 2021 Casper Meijn <casper@meijn.net>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "sudoku-solver"
version = "0.1.0"
edition = "2018"
description = "Simple sudoku solver library"
authors = ["Casper Meijn <casper@meijn.net>"]
repository = "https://github.com/caspermeijn/sudoku-solver"
license = "GPL-3.0-or-later"

[dependencies]
